--- a/projects/konecnyj/dominion/Makefile
+++ b/projects/konecnyj/dominion/Makefile
@@ -1,4 +1,5 @@
 CFLAGS = -Wall -fpic -coverage -lm
+UTFILE = unittestresults.out
 
 rngs.o: rngs.h rngs.c
 	gcc -c rngs.c -g  $(CFLAGS)
@@ -17,7 +18,44 @@ badTestDrawCard: badTestDrawCard.c dominion.o rngs.o
 
 testBuyCard: testDrawCard.c dominion.o rngs.o
 	gcc -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CFLAGS)
+	
+unittest1: unittest1.c dominion.o rngs.o interface.o
+	gcc -o unittest1 unittest1.c -g dominion.o rngs.o interface.o $(CFLAGS)
+	
+unittest2: unittest2.c dominion.o rngs.o interface.o
+	gcc -o unittest2 unittest2.c -g dominion.o rngs.o interface.o $(CFLAGS)
 
+unittest3: unittest3.c dominion.o rngs.o interface.o
+	gcc -o unittest3 unittest3.c -g dominion.o rngs.o interface.o $(CFLAGS)
+
+unittest4: unittest4.c dominion.o rngs.o interface.o
+	gcc -o unittest4 unittest4.c -g dominion.o rngs.o interface.o $(CFLAGS)
+
+cardtest1: cardtest1.c dominion.o rngs.o interface.o
+	gcc -o cardtest1 cardtest1.c -g dominion.o rngs.o interface.o $(CFLAGS)
+	
+cardtest2: cardtest2.c dominion.o rngs.o interface.o
+	gcc -o cardtest2 cardtest2.c -g dominion.o rngs.o interface.o $(CFLAGS)
+
+cardtest3: cardtest3.c dominion.o rngs.o interface.o
+	gcc -o cardtest3 cardtest3.c -g dominion.o rngs.o interface.o $(CFLAGS)
+	
+cardtest4: cardtest4.c dominion.o rngs.o interface.o
+	gcc -o cardtest4 cardtest4.c -g dominion.o rngs.o interface.o $(CFLAGS)
+	
+unittests: unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
+	unittest1 > $(UTFILE)
+	unittest2 >> $(UTFILE)
+	unittest3 >> $(UTFILE)
+	unittest4 >> $(UTFILE)
+	cardtest1 >> $(UTFILE)
+	cardtest2 >> $(UTFILE)
+	cardtest3 >> $(UTFILE)
+	cardtest4 >> $(UTFILE)
+	echo "" >> $(UTFILE)
+	echo "" >> $(UTFILE)
+	gcov -b dominion >> $(UTFILE)
+	
 testAll: dominion.o testSuite.c
 	gcc -o testSuite testSuite.c -g  dominion.o rngs.o $(CFLAGS)
 
@@ -36,4 +74,4 @@ player: player.c interface.o
 all: playdom player testDrawCard testBuyCard badTestDrawCard
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
